@@ -7,8 +7,8 @@
 ## Title: |cff0055tralce|r's Collectible Keybinds
 ## Description: Add keybindings for Tools, Assistants, Companions, and Mementos.
 ## Author: @tralce and @code65536
-## Version: 2024-09-12
-## APIVersion: 101043
+## Version: 2024-10-29
+## APIVersion: 101044
 ## OptionalDependsOn: VotansKeybinder
 
 tralceCollectibles.lua
